vue-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-frontend
spec:
  selector:
    app: vue-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9999
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vue-frontend
  template:
    metadata:
      labels:
        app: vue-frontend
    spec:
      containers:
      - name: vue-frontend
        image: sjseo85/simple-frontend:latest
        ports:
        - containerPort: 9999
