ingress-sevice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: practice-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vue-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: spring-backend
                port:
                  number: 8080
